--- a/Beegin.html
+++ b/Beegin.html
@@ -159,13 +159,13 @@ Please leave this passage here, more for in case I forgot than anything else.</t
 <tw-passagedata pid="17" name="Refuse" tags="" position="339,725">You refuse, drones try to stop you, old mystic lets you go sadly. Gripping emotional writing about dying days later, full of regrets. But coach always said there was no crying in time travel.</tw-passagedata>
 <tw-passagedata pid="18" name="Warp" tags="" position="69,844">
 -1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-
-As you perform the dance, the amulet around your neck glows. The glow turns dark, and seems to be radiating the very absence of light. Shit&#39;s straight spoopy, yo.
+As you perform the dance, the amulet around your neck glows. The glow turns dark, and seems to be radiating the very absence of light. Shit&#39;s straight spoopy, yo. variable: Dances = 1
 
 -2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-
-Similar shit but different somehow idfk im not a writer i just play one on the internet
+Similar shit but different somehow idfk im not a writer i just play one on the internet variable: Dances = 2
 
 -3-3-3-3-3-3-3-3-3-3-3-3-3-3-3-3-3-3-3-3-3-3-3-3-3-3-3-3-3-3-3-3-
-Things are similar but bad in a writerly way that makes the reader cry at the sheer beauty of it all
+Things are similar but bad in a writerly way that makes the reader cry at the sheer beauty of it all variable: Dances = 3
 
 -X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-
 As you dance, you lose all your senses, eventually even your sense of self. You suddenly come to in the [[Main Plaza]].</tw-passagedata>
@@ -188,30 +188,37 @@ What will you do?
 option
 option
 oh hey look an option</tw-passagedata>
-<tw-passagedata pid="20" name="Main Plaza" tags="" position="81,984">This is where shit really starts poppin. Not poopin. That&#39;s a different game. Descriptions n shit.
+<tw-passagedata pid="20" name="Main Plaza" tags="" position="81,984">-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-
+First time description. First things first, you need to go to the [[Hospital|Hospital Lobby]]. (description and map don&#39;t appear)
 
--1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-
-First things first, you need to go to the [[Hospital|Hospital Lobby]].
+Once visit the Supply Closet, Second time description, map appears.
 
-if visited Supply Closet, then show a bunch of shit like this about choosing your paths and hints and stuff, and below the directional map
+Everytime afterwards, just regular description and map
 
-after this choice, the bunch of shit is gone, and its just 
+-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-
+Well ain&#39;t this familiar.
 
 -X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-
+Descriptions n shit.
 
 the directional map
 </tw-passagedata>
-<tw-passagedata pid="21" name="Pawn Shop" tags="" position="787,1078">Bluh bluh description
+<tw-passagedata pid="21" name="Pawn Shop" tags="" position="797,1086">Bluh bluh description
 
 If you have nothing: &quot;If ya got nuthin to swap for, then scram, chief.&quot;
-If you have the old book from the derelict housing, you can get a book that allows you to always skip the sewer maze.
-If you have the mcguffin from the abandoned nigthtclub idfk</tw-passagedata>
-<tw-passagedata pid="22" name="Hospital Lobby" tags="" position="936,1082">The hospital is clean and smells of cleanliness.
+If you have the {bee pun book} you can get a book that allows you to always skip the sewer maze.
+If you have the {McGuffin 1} you can trade for taxidermy equipment</tw-passagedata>
+<tw-passagedata pid="22" name="Hospital Lobby" tags="" position="930,1090">The hospital is clean and smells of cleanliness.
 
 -1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-
 You walk up to the counter and politely ask where the babies are. You are directed where to go. You start to walk off, but double back to thank the secretary attendant person thing. She looks up politely as you thank her, but she seems puzzled. &quot;For what? May I help you, ma&#39;am?&quot; stuff blah blah you walk off to the [[Pupae Ward]]
 
-Once you have been to the supply closet, you the directional map appears</tw-passagedata>
+Once you have been to the supply closet, link to [[Main Plaza|Estuary]] appears.
+
+Anytime after, nothing special appears
+
+-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-
+Directional Map</tw-passagedata>
 <tw-passagedata pid="23" name="GHF1" tags="" position="934,1237">Imposing building blah blah
 
 -1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-
@@ -239,12 +246,18 @@ If you have no taxidermied items or Queen&#39;s Stinger, the shop owner ignores 
 She looks up at you with one swift sharp glance, and you nope the fuck out of there. Maybe you should only come back with something that would interest someone who devotes their lives to embalming dead things.
 
 -1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-
-</tw-passagedata>
-<tw-passagedata pid="26" name="Park" tags="" position="783,1357">Description.
+If you have the {taxidermy equipment}, shopkeeper looks at you in interest, and says if you can get a... local specimen, she would have something very special to offer you.
 
+If you have the {taxidermied larvae} or {taxidermied pupa}, you can trade for {taxidermied queen top} or {taxidermied queen bottom}.</tw-passagedata>
+<tw-passagedata pid="26" name="Park" tags="" position="783,1358">Description.
+
+-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-
 Look at Abandoned Nightclub (click)
 
 paragraph about getting a sense of the guards rotations by casually snoopin from a park bench, flag is dropped or variable changed or whatever for use at the abandoned nightclub
+
+If you have taxidermy equipment, there pupa hanging out, you may choose to ebalm them will they are still alive. Dark yo. If you do, you receive the {taxidermied pupa}
+
 
 Directional Map below</tw-passagedata>
 <tw-passagedata pid="27" name="Bar" tags="" position="657,1150">Description
@@ -280,14 +293,18 @@ once you get either, worker goes back to her job, wont be able to unlock the oth
 Directional Map</tw-passagedata>
 <tw-passagedata pid="29" name="Abandoned Nightclub" tags="" position="944,1370">Description.
 
+-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-
 If not been snoopin in the park, you get noticed by a guard and must duck [[away|Sewer Exit]].
-If been snoopin in the park, you sneak in and find The First Macguffin. variable changed to reflect such. You then quickly duck [[away|Sewer Exit]] before anyone notices you.</tw-passagedata>
+
+If been snoopin in the park, you sneak in and find a {bee pun book} variable changed to reflect such. You then quickly duck [[away|Sewer Exit]] before anyone notices you.
+
+Afterwards, reason to [[return|Sewer Exit]]</tw-passagedata>
 <tw-passagedata pid="30" name="Derelict Housing" tags="" position="528,1269">Description
 
-Simple puzzle, find an old book about something bee pun
+Simple puzzle, find a {McGuffin 1}
 
 Dirrectional Map</tw-passagedata>
-<tw-passagedata pid="31" name="Hive Entrance" tags="" position="525,1405">Description
+<tw-passagedata pid="31" name="Chapel" tags="" position="525,1405">Description
 
 -1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-
 nothing to see here
@@ -310,7 +327,7 @@ Directional Map</tw-passagedata>
 [[Sewer]]
 [[GHF3]]
 [[Abandoned Nightclub]]</tw-passagedata>
-<tw-passagedata pid="34" name="Sewer" tags="" position="1228,916">Adventures happen. Maybe a small text adventure maze thing, you know, left right backwards forwards, etc. those are popular with the kids, right? This can be skipped once completed once.
+<tw-passagedata pid="34" name="Sewer" tags="" position="1222,951">Adventures happen. Maybe a small text adventure maze thing, you know, left right backwards forwards, etc. those are popular with the kids, right? This can be skipped once completed once.
 
 [[Exit the sewers!|Sewer Exit]]</tw-passagedata>
 <tw-passagedata pid="35" name="Sewer Entrance (Bar)" tags="" position="657,1025">Only becomes visible after successful talking to factory worker
@@ -337,7 +354,15 @@ Next time: You try sneaking into the University, but security has gone up since 
 Next time: You really get the impression you&#39;re not goin to get in without some ID or a really good reason.
 
 Every time after: Look, the school isn&#39;t important yet, okay? Sheesh.</tw-passagedata>
-<tw-passagedata pid="38" name="Pupae Ward" tags="" position="1074,1079">things happen, get into [[Supply Closet]]</tw-passagedata>
+<tw-passagedata pid="38" name="Pupae Ward" tags="" position="1074,1079">Description
+
+-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-
+
+things happen, get into [[Supply Closet]]
+
+Once left Supply Closet, all but description disappears, but return to [[Hospital Lobby]] appears.
+
+If you return with {taxidermy equipment} you may taxidermy a larva. Sicko. If you do, get {taxidermied larva}.</tw-passagedata>
 <tw-passagedata pid="39" name="Supply Closet" tags="" position="1199,1118">&lt;span id=&quot;description&quot;&gt;Supplies are running low due to the shit going down, but you can probably steal about half of what you&#39;ll need, and there still might be enough left over for a few pupae.
 &lt;/span&gt;
 &lt;&lt;nobr&gt;&gt;
@@ -374,16 +399,21 @@ Every time after: Look, the school isn&#39;t important yet, okay? Sheesh.</tw-pa
 [[Ask the college kids if theyve seen anything while, you know, pupating|Dorm Lobby]]
 [[Derelict Housing]] 
 [[Bar]]
-[[Hive Entrance]] 
+[[Chapel]] 
 [[Hospital Lobby]] 
 [[Pawn Shop]] 
 [[Sewer Entrance (Bar)]] Only available if told about it by barfly
 [[Palace Entrance]] 
 [[School]]
-[[Jail]]</tw-passagedata>
+[[Jail]]
+[[Taxidermy]] </tw-passagedata>
 <tw-passagedata pid="41" name="GHF3" tags="" position="1093,1245">You sneak in, have some adventures and dialogue choices or something, and steal some dank herb i mean royal jelly
 
-some dank jelly</tw-passagedata>
+some dank jelly
+
+you get {half enough jelly} and duck [[away|Sewer Exit]] 
+
+Afterwards: You&#39;ve done all you can there. Best not to risk it, and just duck back to the [[Sewers|Sewer Exit]].</tw-passagedata>
 <tw-passagedata pid="42" name="Room 1" tags="" position="263,1296">nah
 
 [[Dorm Lobby]] </tw-passagedata>
@@ -393,6 +423,14 @@ some dank jelly</tw-passagedata>
 <tw-passagedata pid="44" name="Room 3" tags="" position="264,1546">gratuituous sex scene
 
 [[Dorm Lobby]] </tw-passagedata>
+<tw-passagedata pid="45" name="Notes on Items" tags="" position="463,4">I am referring to items that are kept by the player inside {brackets like this}.</tw-passagedata>
+<tw-passagedata pid="46" name="Enough Jelly" tags="" position="351,859">This passage is put into the bottom of every passage where it&#39;s possible to get enough jelly. It only appears when variable jelly is equal to or greater than 2.
+
+You have enough jelly, and it sounds like the parade is just starting! Quick, you must get to the [[Palace|Palace Side]] right away!</tw-passagedata>
+<tw-passagedata pid="47" name="Palace Side" tags="" position="219,857">-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-
+
+Many things happen, you are sent back in [[time|Warp]].</tw-passagedata>
+<tw-passagedata pid="48" name="Estuary" tags="" position="914,795">Reflection time when you leave the Hospital. If you stole, then this text appears. If you not be steal steal, this text appears. You wander in a daze until you end back in the Main Plaza. Well, time to get to [[work|Main Plaza]] </tw-passagedata>
 </tw-storydata>
 </div>
 	<script id="script-sugarcube" type="text/javascript">
