--- a/Beegin.html
+++ b/Beegin.html
@@ -106,6 +106,7 @@ var saveAs=saveAs||navigator.msSaveBlob&&navigator.msSaveBlob.bind(navigator)||f
 
 
 
+
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">
 
 
@@ -116,7 +117,8 @@ var saveAs=saveAs||navigator.msSaveBlob&&navigator.msSaveBlob.bind(navigator)||f
 
 
 
-</script><tw-passagedata pid="1" name="Beegin+End" tags="" position="76,90">You begin at The End (click The End, it expands into description of The End, a local bar). You are sad (click on sad, it expands into reasons why). Everyone is sad. But soon happiness will happen, because She is arriving (She expands into the Queen). Everyone is happy until dark viscuous blood is coughed up by the queen. Hilarity ensues. You run forward, pushing aside the drones panicking around Her. &quot;Let me through,&quot; you say. &quot;I&#39;m a [[doctor]].&quot;
+
+</script><tw-passagedata pid="1" name="Beegin+End" tags="" position="64,86">You begin at The End (click The End, it expands into description of The End, a local bar). You are sad (click on sad, it expands into reasons why). Everyone is sad. But soon happiness will happen, because She is arriving (She expands into the Queen). Everyone is happy until dark viscuous blood is coughed up by the queen. Hilarity ensues. You run forward, pushing aside the drones panicking around Her. &quot;Let me through,&quot; you say. &quot;I&#39;m a [[doctor]].&quot;
 
 &lt;&lt;set $visited = {}&gt;&gt;
 &lt;&lt;set $visited.supplyCloset = 0&gt;&gt;
@@ -165,18 +167,7 @@ Please leave this passage here, more for in case I forgot than anything else.</t
 [[Refuse]]</tw-passagedata>
 <tw-passagedata pid="16" name="Accept" tags="" position="201,724">You do the time warp for the first and only [[time|Warp]].</tw-passagedata>
 <tw-passagedata pid="17" name="Refuse" tags="" position="339,725">You refuse, drones try to stop you, old mystic lets you go sadly. Gripping emotional writing about dying days later, full of regrets. But coach always said there was no crying in time travel.</tw-passagedata>
-<<<<<<< HEAD
-<tw-passagedata pid="18" name="Warp" tags="" position="69,844">
--1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-
-As you perform the dance, the amulet around your neck glows. The glow turns dark, and seems to be radiating the very absence of light. Shit&#39;s straight spoopy, yo. variable: Dances = 1
-
--2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-
-Similar shit but different somehow idfk im not a writer i just play one on the internet variable: Dances = 2
-
--3-3-3-3-3-3-3-3-3-3-3-3-3-3-3-3-3-3-3-3-3-3-3-3-3-3-3-3-3-3-3-3-
-Things are similar but bad in a writerly way that makes the reader cry at the sheer beauty of it all variable: Dances = 3
-=======
-<tw-passagedata pid="18" name="Warp" tags="" position="69,844">&lt;&lt;set $visited.warp += 1&gt;&gt;
+<tw-passagedata pid="18" name="Warp" tags="" position="65,922">&lt;&lt;set $visited.warp += 1&gt;&gt;
 &lt;&lt;if $visited.warp === 1&gt;&gt;
 As you perform the dance, the amulet around your neck glows. The glow turns dark, and seems to be radiating the very absence of light. Shit&#39;s straight spoopy, yo.
 &lt;&lt;elseif $visited.warp === 2&gt;&gt;
@@ -184,7 +175,7 @@ Similar shit but different somehow idfk im not a writer i just play one on the i
 &lt;&lt;elseif $visited.warp &gt; 2&gt;&gt;
 Things are similar but bad in a writerly way that makes the reader cry at the sheer beauty of it all
 &lt;&lt;endif&gt;&gt;
->>>>>>> origin/master
+&gt;&gt;&gt;&gt;&gt;&gt;&gt; origin/master
 
 As you dance, you lose all your senses, eventually even your sense of self. You suddenly come to in the [[Main Plaza]].</tw-passagedata>
 <tw-passagedata pid="19" name="Note on Formatting" tags="reference" position="336,7">For now, if a passage will be visited multiple times over the course of the different loops/dances, I will put all the variations in that one passage. To differentiate things, each passage will be divided with handy divider thingies. I&#39;m a goddamn wordsmith. The numbers in the dividers show how many dances have been done. If there&#39;s an x instead of a number, its stuff that&#39;s the same on every version but comes AFTER the changing shit. Example:
@@ -206,20 +197,17 @@ What will you do?
 option
 option
 oh hey look an option</tw-passagedata>
-<<<<<<< HEAD
-<tw-passagedata pid="20" name="Main Plaza" tags="" position="81,984">-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-
-First time description. First things first, you need to go to the [[Hospital|Hospital Lobby]]. (description and map don&#39;t appear)
-=======
-<tw-passagedata pid="20" name="Main Plaza" tags="" position="81,984">
-&lt;&lt;set $visited.plaza += 1&gt;&gt;
-This is where shit really starts poppin. Not poopin. That&#39;s a different game. Descriptions n shit.
->>>>>>> origin/master
+<tw-passagedata pid="20" name="Main Plaza" tags="" position="152,1090">if visit warp once and not supply closet:
 
-Once visit the Supply Closet, Second time description, map appears.
+First time description. First things first, you need to go to the [[Hospital Lobby]]. 
+
+
+If visit warp once and supply closet: Second time description, map appears.
 
 Everytime afterwards, just regular description and map
 
 -2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-
+if visit.warp === 2
 Well ain&#39;t this familiar.
 
 -X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-
@@ -230,33 +218,24 @@ the directional map
 <tw-passagedata pid="21" name="Pawn Shop" tags="" position="797,1086">Bluh bluh description
 
 If you have nothing: &quot;If ya got nuthin to swap for, then scram, chief.&quot;
-<<<<<<< HEAD
+&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
 If you have the {bee pun book} you can get a book that allows you to always skip the sewer maze.
 If you have the {McGuffin 1} you can trade for taxidermy equipment</tw-passagedata>
-<tw-passagedata pid="22" name="Hospital Lobby" tags="" position="930,1090">The hospital is clean and smells of cleanliness.
-=======
-If you have the old book from the derelict housing, you can get a book that allows you to always skip the sewer maze.
-If you have the mcguffin from the abandoned nigthtclub idfk</tw-passagedata>
-<tw-passagedata pid="22" name="Hospital Lobby" tags="" position="936,1082">&lt;&lt;set $visited.hospital += 1&gt;&gt;
+<tw-passagedata pid="22" name="Hospital Lobby" tags="" position="926,1086">&lt;&lt;set $visited.hospital += 1&gt;&gt;
 The hospital is clean and smells of cleanliness.
->>>>>>> origin/master
+&gt;&gt;&gt;&gt;&gt;&gt;&gt; origin/master
 
 &lt;&lt;if $visited.hospital === 1&gt;&gt;
 You walk up to the counter and politely ask where the babies are. You are directed where to go. You start to walk off, but double back to thank the secretary attendant person thing. She looks up politely as you thank her, but she seems puzzled. &quot;For what? May I help you, ma&#39;am?&quot; stuff blah blah you walk off to the [[Pupae Ward]]
 &lt;&lt;endif&gt;&gt;
 
-<<<<<<< HEAD
+&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
 Once you have been to the supply closet, link to [[Main Plaza|Estuary]] appears.
 
 Anytime after, nothing special appears
 
 -X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-
 Directional Map</tw-passagedata>
-=======
-&lt;&lt;if $visited.supplyCloset &gt; 0&gt;&gt;
-map here
-&lt;&lt;endif&gt;&gt;</tw-passagedata>
->>>>>>> origin/master
 <tw-passagedata pid="23" name="GHF1" tags="" position="934,1237">Imposing building blah blah
 
 -1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-
@@ -365,7 +344,7 @@ Directional Map</tw-passagedata>
 [[Sewer]]
 [[GHF3]]
 [[Abandoned Nightclub]]</tw-passagedata>
-<tw-passagedata pid="34" name="Sewer" tags="" position="1222,951">Adventures happen. Maybe a small text adventure maze thing, you know, left right backwards forwards, etc. those are popular with the kids, right? This can be skipped once completed once.
+<tw-passagedata pid="34" name="Sewer" tags="" position="1271,998">Adventures happen. Maybe a small text adventure maze thing, you know, left right backwards forwards, etc. those are popular with the kids, right? This can be skipped once completed once.
 
 [[Exit the sewers!|Sewer Exit]]</tw-passagedata>
 <tw-passagedata pid="35" name="Sewer Entrance (Bar)" tags="" position="657,1025">Only becomes visible after successful talking to factory worker
@@ -392,22 +371,14 @@ Next time: You try sneaking into the University, but security has gone up since 
 Next time: You really get the impression you&#39;re not goin to get in without some ID or a really good reason.
 
 Every time after: Look, the school isn&#39;t important yet, okay? Sheesh.</tw-passagedata>
-<<<<<<< HEAD
-<tw-passagedata pid="38" name="Pupae Ward" tags="" position="1074,1079">Description
+<tw-passagedata pid="38" name="Pupae Ward" tags="" position="1073,1086">Description
 
--1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-
-
-things happen, get into [[Supply Closet]]
-
-Once left Supply Closet, all but description disappears, but return to [[Hospital Lobby]] appears.
+things happen, get into &lt;&lt;if $visited.supplyCloset === 0&gt;&gt;[[Supply Closet]]&lt;&lt;else&gt;&gt;...just kidding the janitor shut the door&lt;&lt;endif&gt;&gt;. Might as well return to the [[Hospital Lobby]].
 
 If you return with {taxidermy equipment} you may taxidermy a larva. Sicko. If you do, get {taxidermied larva}.</tw-passagedata>
-<tw-passagedata pid="39" name="Supply Closet" tags="" position="1199,1118">&lt;span id=&quot;description&quot;&gt;Supplies are running low due to the shit going down, but you can probably steal about half of what you&#39;ll need, and there still might be enough left over for a few pupae.
-=======
-<tw-passagedata pid="38" name="Pupae Ward" tags="" position="1074,1079">things happen, get into &lt;&lt;if $visited.supplyCloset === 0&gt;&gt;[[Supply Closet]]&lt;&lt;else&gt;&gt;...just kidding the janitor shut the door&lt;&lt;endif&gt;&gt;</tw-passagedata>
-<tw-passagedata pid="39" name="Supply Closet" tags="" position="1199,1118">&lt;&lt;set $visited.supplyCloset += 1&gt;&gt;
+<tw-passagedata pid="39" name="Supply Closet" tags="" position="1068,924">&lt;&lt;set $visited.supplyCloset += 1&gt;&gt;
 &lt;span id=&quot;description&quot;&gt;Supplies are running low due to the shit going down, but you can probably steal about half of what you&#39;ll need, and there still might be enough left over for a few pupae.
->>>>>>> origin/master
+&gt;&gt;&gt;&gt;&gt;&gt;&gt; origin/master
 &lt;/span&gt;
 &lt;&lt;nobr&gt;&gt;
 &lt;span id=&quot;steal&quot;&gt;
